# rust-glue

./: .gitignore  build_release
glue/: Cargo.toml
glue/src/: lib.rs
glue_adr/: Cargo.toml  build.rs  cargo-config.toml
glue_adr/adr/: settings.gradle
glue_adr/adr/app/: build.gradle
glue_adr/adr/app/src/androidTest/java/com/proximie/rustglueadr/: ExampleInstrumentedTest.kt
glue_adr/adr/app/src/main/: AndroidManifest.xml
glue_adr/adr/app/src/main/java/com/proximie/rustglueadr/: AndroidGlue.java  InternalPointerMarker.java  JNIReachabilityFence.java  MainActivity.kt
glue_adr/adr/app/src/main/java/com/proximie/rustglueadr/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
glue_adr/adr/app/src/main/res/values/: strings.xml  themes.xml
glue_adr/adr/app/src/test/java/com/proximie/rustglueadr/: ExampleUnitTest.kt
glue_adr/adr/gradle/wrapper/: gradle-wrapper.properties
glue_adr/scripts/: release_build
glue_adr/src/: android_c_headers.rs  java_glue.rs.in  lib.rs
glue_adr/src/ffi/: adr_ffi.rs  mod.rs
glue_core/: Cargo.toml
glue_core/src/: lib.rs  main.rs
glue_ios/: Cargo.toml  build.rs  readme.md
glue_ios/include/: glue_native.h  module.modulemap
glue_ios/scripts/: bundle_xcframework  release_build  setup_build_tools
glue_ios/src/: main.rs
glue_ios/src/ffi/: glue_native.h  ios_ffi.rs  mod.rs
glue_wasm/: Cargo.toml
glue_wasm/src/: lib.rs
