[package]
name = "glue_adr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glue_core = { path="../glue_core/" }

[target.'cfg(target_os="android")'.dependencies]
jni = "0.19.0"

[lib]
crate-type = ["dylib"]
